# aivenator

./: .dockerignore  .envrc  .gitignore  .mockery.yaml  Cargo.toml  Dockerfile  Makefile  PLAN-namespace-validation.md  README.md  flake.nix  go.mod  go.sum  main.go  redeploy_aivenapps.nu  rollout.md  tools.go  version.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  helm-charts.yaml  main.yml
charts/aivenator/: Chart.yaml  Feature.yaml  values.yaml
cmd/aivenator/: main.go
constants/: constants.go
controllers/: controllers_test.go  dummy.go
controllers/aiven_application/: reconciler.go  reconciler_test.go
controllers/mocks/: client.go
controllers/secrets/: finalizer.go  janitor.go  janitor_test.go
hack/: aa-prot.yml  aa-test.yml  annotate-aiven-secrets-with-service-and-username.hs  app-test.yml  common.py  create_replicating_valkeys.py  dashboard.json  dashboard.yaml  kafka-app-test.yml  kcat-conf-bash-generator  local_test.sh  opensearch-app-test.yml  opensearch-test.yml  redeploy_kafka_apps.nu  reset-sync-hash-no-individual-secret.hs  secret_cleaner.py  secret_metadata_fixer.py  stats.sh  update_redis_acl.py  user_cleaner.py  valkey-app-test.yml  valkey-test.yml
pkg/aiven/: aiven.go
pkg/annotations/: annotations.go
pkg/certificate/: credstores_test.go  execstores.go  mock_generator.go  mock_generator_test.go  native.go
pkg/credentials/: cleaner.go  cleaner_test.go  creator.go  creator_test.go  janitor.go  janitor_test.go  manager.go  manager_test.go  mock_client.go  mock_handler.go  mock_handler_test.go  (+3 more)
src/: aiven.rs  main.rs
(+64 files in other folders)
