[package]
name = "aivenator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
kube = { version = "2.0.0", features = ["derive", "runtime", "config"] }
schemars = "1.0.4"
tokio = { version = "1.47.1", features = ["full"] }
